--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,9 +36,9 @@ jobs:
        - name: Loop workflow
          continue-on-error: true
          run: |
-              git clone https://github.com/${GITHUB_REPOSITORY} loop
+              git clone https://github.com/${{ secrets.GH_REPO }} loop
               cd loop || exit 1
-              echo $(date -u +%F-%T%P) >> loop.txt
+              echo $(TZ='${{ secrets.TZ }}' date) >> loop.txt
               git add loop.txt
-              git commit -m "Workflow : Loop $(date -u +%D-%T%P)"
-              git push -q https://${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY} HEAD:master
+              git commit -m "Workflow : Loop $(TZ='${{ secrets.TZ }}' date"
+              git push -q https://${{ secrets.GH_TOKEN }}@github.com/${{ secrets.GH_REPO }} HEAD:master
