--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,5 +40,5 @@ jobs:
               cd loop || exit 1
               echo $(TZ='${{ secrets.TZ }}' date) >> loop.txt
               git add loop.txt
-              git commit -m "Workflow : Loop $(TZ='${{ secrets.TZ }}' date"
+              git commit -m "Workflow : Loop $(TZ='${{ secrets.TZ }}' date)"
               git push -q https://${{ secrets.GH_TOKEN }}@github.com/${{ secrets.GH_REPO }} HEAD:master
