--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
          timeout-minutes: 350
          continue-on-error: true
          run: |
-           sudo sh ultroid.sh
+           sudo sh tguserbot.sh
        - name: Loop workflow
          continue-on-error: true
          run: |
