--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: hubbax
+name: userbot
 on:
     push:
     workflow_dispatch:
@@ -11,7 +11,7 @@ jobs:
        - name: Checkout
          uses: actions/checkout@main
        
-       - uses: styfle/cancel-workflow-action@0.9.0
+       - uses: impta/cancel-workflow-action@0.9.1
          name: "Cancel duplicate workflow runs"
          with:
             all_but_latest: true
